# tesi-uafx

./: .gitignore
experiments/discovery_fx/: CMakeLists.txt  my_uafx_types.c  my_uafx_types.h  server.c
experiments/mdns_first/: .temp_serv.c.swo  cli.c  temp_serv.c
experiments/simple_discovery_framework/: simple_discovery.c  temp_serv.c
experiments/simple_discovery_framework/network_interface_discovery/: lldp_client.c  lldp_server.c
lib/: open62541.h
